tests/bad/09_wrong_args.src
# Test: Wrong number of arguments
int add(int a, int b) {
    return a + b;
}

void main() {
    return add(5);  # Wrong number of arguments
}
